Fixed: Remove bold styling when using JUI as it looks out of place in the table controls

--- a/media/css/demo_table_jui.css
+++ b/media/css/demo_table_jui.css
@@ -70,6 +70,10 @@ table.display thead th {
 	* cursor: hand;
 }
 
+div.dataTables_wrapper .ui-widget-header {
+	font-weight: normal;
+}
+
 
 /*
  * Sort arrow icon positioning
